@@ -188,7 +188,9 @@ public interface CommonParams {
       CONFIGSETS_HANDLER_PATH,
       AUTHC_PATH,
       AUTHZ_PATH,
-      METRICS_PATH));
+      METRICS_PATH,
+      "/____v2/cluster/security/authentication",
+      "/____v2/cluster/security/authorization"));
 
   /** valid values for: <code>echoParams</code> */
   enum EchoParamStyle {
